--- a/20251031_chemia.html
+++ b/20251031_chemia.html
@@ -79,7 +79,70 @@ const questions = [
         "Bo diament ma wolne elektrony, a grafit ich nie ma",
         "Bo diament jest cieńszy",
         "Bo grafit jest przezroczysty"
-    ], correct: 0 }
+    ], correct: 0 },
+{ q: "Na czym polega spalanie całkowite węglowodorów?", 
+      answers: ["Powstaje tylko tlenek węgla (CO)", "Powstaje CO₂ i H₂O", "Powstaje sadza", "Nie powstaje woda"], 
+      correct: 1 },
+
+    { q: "Na czym polega spalanie niecałkowite węglowodorów?", 
+      answers: ["Powstaje CO₂ i H₂O", "Powstaje tylko CO₂", "Powstaje CO lub C (sadza)", "Nie wydziela się energia"], 
+      correct: 2 },
+
+    { q: "Na czym polega spalanie półspalanie (połowiczne)?", 
+      answers: ["Powstaje CO i H₂O", "Powstaje tylko CO₂", "Powstaje CO₂ i H₂O", "Powstaje tylko sadza"], 
+      correct: 0 },
+
+    { q: "Jakie produkty powstają podczas spalania całkowitego metanu (CH₄)?", 
+      answers: ["CO + H₂O", "CO₂ + H₂O", "C + H₂O", "CO + H₂"], 
+      correct: 1 },
+
+    { q: "Co to jest substytucja rodnikowa?", 
+      answers: ["Rodzaj spalania w obecności tlenu", "Reakcja, w której atom wodoru w alkanie jest zastępowany innym atomem", "Rodzaj reakcji utleniania", "Proces polimeryzacji"], 
+      correct: 1 },
+
+    { q: "Który z poniższych to wzór ogólny alkanów?", 
+      answers: ["CnH2n", "CnH2n+2", "CnH2n-2", "CnHn"], 
+      correct: 1 },
+
+    { q: "Który związek ma wzór CH₄?", 
+      answers: ["Metan", "Etan", "Propan", "Butan"], 
+      correct: 0 },
+
+    { q: "Ile atomów węgla ma pentan?", 
+      answers: ["3", "4", "5", "6"], 
+      correct: 2 },
+
+    { q: "Jak wygląda wzór sumaryczny heksanu?", 
+      answers: ["C₆H₁₄", "C₆H₁₂", "C₆H₁₀", "C₆H₆"], 
+      correct: 0 },
+
+    { q: "Który związek to oktan?", 
+      answers: ["C₈H₁₈", "C₇H₁₄", "C₉H₂₀", "C₁₀H₂₂"], 
+      correct: 0 },
+
+    { q: "Który związek ma 10 atomów węgla?", 
+      answers: ["Dekan", "Nonan", "Heptan", "Butan"], 
+      correct: 0 },
+
+    { q: "Jak nazywa się wzór pokazujący tylko połączenia między atomami węgla (bez atomów wodoru)?", 
+      answers: ["Sumaryczny", "Szkieletowy", "Grupowy", "Półstrukturalny"], 
+      correct: 1 },
+
+    { q: "Który wzór pokazuje wszystkie wiązania między atomami?", 
+      answers: ["Szkieletowy", "Półstrukturalny", "Strukturalny", "Grupowy"], 
+      correct: 2 },
+
+    { q: "Jak nazywa się wzór, w którym grupy atomów są zapisane razem (np. CH₃–CH₂–CH₃)?", 
+      answers: ["Strukturalny", "Grupowy", "Półstrukturalny", "Sumaryczny"], 
+      correct: 2 },
+
+    { q: "Który związek ma wzór C₃H₈?", 
+      answers: ["Metan", "Propan", "Butan", "Etan"], 
+      correct: 1 },
+
+    { q: "Jak wygląda wzór grupowy butanu?", 
+      answers: ["CH₃–CH₂–CH₂–CH₃", "CH₃–CH₃", "CH₄", "CH₃–CH₂–CH₂–CH₂–CH₃"], 
+      correct: 0 }
 ];
 
 let usedQuestions = [];
