--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20251101_historia.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1761995854/historia_prlmra.png" alt="Historia">
+                <span>Historia</span>
+            </a>
             <a href="20251031_chemia.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1761916824/chemiaweglo_icicsv.png" alt="Chemia">
                 <span>Chemia</span>
@@ -282,7 +286,7 @@ for (let i = apps.length - 1; i > 0; i--) {
 }
 
 // Wybieramy 10 pierwszych
-let selectedApps = apps.slice(0, 30);
+let selectedApps = apps.slice(0, 50);
 
 // Czyścimy i dodajemy do kontenera
 let container = document.querySelector('.buttons');
