--- a/20251101_historia.html
+++ b/20251101_historia.html
@@ -118,7 +118,7 @@ const questions = [
     {q:"Co to znaczy 'Migracja za chlebem'?", a:["Wyjazd w celach wojennych","Emigracja zarobkowa","Kolonializm","Wojna o ziemię"], correct:1},
     {q:"'Perłą w koronie Brytyjskiej' nazywano:", a:["Kanadę","Australię","Indie","Egipt"], correct:2},
     {q:"Co sprowadzano z Indii?", a:["Kawę i kakao","Herbatę i przyprawy","Złoto i ropę","Samochody"], correct:1},
-    {q:"Kto dołączył do walki o kolonie pod koniec XIX wieku?", a:["Japonia i Niemcy","Austria i Belgia","Polska i Grecja","Szwajcaria i Norwegia"], correct:0},
+    {q:"Kto dołączył do walki o kolonie pod koniec XIX wieku?", a:["USA, Japonia i Niemcy","Austria i Belgia","Polska i Grecja","Szwajcaria i Norwegia"], correct:0},
     {q:"Co to jest opium?", a:["Metal","Narkotyk","Przyprawa","Broń"], correct:1},
     {q:"Kto wygrał wojnę opiumową?", a:["Chiny","Japonia","Wielka Brytania","Indie"], correct:2},
     {q:"Autorem 'Kapitału' był:", a:["Karol Marks","Karol Darwin","Fryderyk Engels","Otto von Bismarck"], correct:0},
