--- a/20251021_bloki3.html
+++ b/20251021_bloki3.html
@@ -46,6 +46,7 @@
             background-color: blue;
             height: 100px;
             clear: both;
+            aling-items: center;
         }
     </style>
 </head>
@@ -57,6 +58,6 @@
         <section id="bialy"></section>
     </aside>
     <aside id="prawy"></aside>
-    <footer></footer>
+    <footer>Dawid</footer>
 </body>
 </html>
