--- a/20251021_bloki3.html
+++ b/20251021_bloki3.html
@@ -46,7 +46,7 @@
             background-color: blue;
             height: 100px;
             clear: both;
-            aling-items: center;
+            line-height: 100px;
         }
     </style>
 </head>
