--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -24,6 +24,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251103_bloki5.html">Sprawdzian</a></td></tr>
 <tr><td></td><td><a href="20251021_bloki3.html">Bloki 3</a></td></tr>
 <tr><td></td><td><a href="20250918_bloki.html">Bloki 2</a></td></tr>
 <tr><td></td><td><a href="20250911_blok.html">Bloki</a></td></tr>
