--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -41,6 +41,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251023_index.html">Hurtownia</a></td></tr>
 <tr><td></td><td><a href="20251021_formaty.html">Formatowanie</a></td></tr>
 <tr><td></td><td><a href="20251009_galeria3.html">Galeria 3</a></td></tr>
 <tr><td></td><td><a href="20251009_galeria2.html">Galeria 2</a></td></tr>
