--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -15,6 +15,7 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251017_sprawdzian.html">Sprawdzian</a></td></tr>
 <tr><td></td><td><a href="20250916_formularz.html">Formularz 2</a></td></tr>
 <tr><td></td><td><a href="20250909_formularz.html">Formularz</a></td></tr>
 <tr><td></td><td><a href="20250902_zdarzenia.html">Zdarzenia</a></td></tr>
@@ -24,6 +25,9 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251104_tabelka2.html">Tabele 2</a></td></tr>
+<tr><td></td><td><a href="20251104_tabelka.html">Tabele 1</a></td></tr>
+<tr><td></td><td><a href="20251104_bloki6.html">Poprawa</a></td></tr>
 <tr><td></td><td><a href="20251103_bloki5.html">Sprawdzian</a></td></tr>
 <tr><td></td><td><a href="20251021_bloki3.html">Bloki 3</a></td></tr>
 <tr><td></td><td><a href="20250918_bloki.html">Bloki 2</a></td></tr>
@@ -52,7 +56,6 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
-<tr><td></td><td><a href="20251017_sprawdzian.html">Sprawdzian Formularz</a></td></tr>
 <tr><td></td><td><a href="20251015_kolo.html">Pole i Obwód Koła</a></td></tr>
 <tr><td></td><td><a href="20251008_snieznik.html">Śnieżnik</a></td></tr>
 <tr><td></td><td><a href="20251008_randint.html">Zgadnij Liczbę</a></td></tr>
