--- a/20251101_historia.html
+++ b/20251101_historia.html
@@ -147,7 +147,7 @@ const questions = [
     {q:"Jakie były style w malarstwie?", a:["Barok, rokoko, gotyk","Impresjonizm, realizm, kubizm","Klasycyzm, renesans, romantyzm","Surrealizm, gotyk, renesans"], correct:1},
     {q:"Co reprezentowało kulturę masową?", a:["Teatr i opera","Prasa, kino, radio","Literatura i filozofia","Polityka i religia"], correct:1},
     {q:"Kiedy kobiety dostały prawa wyborcze w Polsce?", a:["1914","1918","1921","1939"], correct:1},
-    {q:"Jaki mundur mieli żołnierze Unii (USA)?", a:["Czerwony","Niebieski","Szary","Zielony"], correct:1},
+    {q:"Jaki mundur mieli żołnierze Unii (USA)?", a:["Czerwony","Ciemno Niebieski","Szary","Zielony"], correct:1},
     {q:"Czym była doktryna Monroego?", a:["Polityką izolacjonizmu USA wobec Europy","Sojuszem militarnym USA i Francji","Programem reform społecznych w USA","Doktryną wojny totalnej"], correct:0},
     {q:"Jaki kanał skrócił drogę do Indii?", a:["Kanał Panamski","Kanał Kiloński","Kanał Sueski","Kanał La Manche"], correct:2},
     {q:"Co to teoria względności?", a:["Teoria budowy atomu","Teoria ewolucji","Teoria Alberta Einsteina o czasie i przestrzeni","Teoria powstania życia na Ziemi"], correct:2}
