--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -57,6 +57,8 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251110_haslo.html">Hasło</a></td></tr>
+<tr><td></td><td><a href="20251110_samochody.html">Samochody 2</a></td></tr>
 <tr><td></td><td><a href="20251106_komis.html">Samochody</a></td></tr>
 <tr><td></td><td><a href="20251015_kolo.html">Pole i Obwód Koła</a></td></tr>
 <tr><td></td><td><a href="20251008_snieznik.html">Śnieżnik</a></td></tr>
