--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -11,20 +11,24 @@
 <body>
     <div class="container">
         <h1>Szkoła</h1>
-        <h2>Aplikacje Internetowe</h2>
+        <h2>Egzaminy</h2>
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
-<tr><td></td><td><a href="20251017_sprawdzian.html">Sprawdzian</a></td></tr>
-<tr><td></td><td><a href="20250916_formularz.html">Formularz 2</a></td></tr>
-<tr><td></td><td><a href="20250909_formularz.html">Formularz</a></td></tr>
-<tr><td></td><td><a href="20250902_zdarzenia.html">Zdarzenia</a></td></tr>
-            </table> 
+<tr><td></td><td><a href="20251106_index.html">Fryzjerstwo</a></td></tr>
+<tr><td></td><td><a href="20251028_obrazki.html">Obrazki</a></td></tr>
+<tr><td></td><td><a href="20251023_index.html">Hurtownia</a></td></tr>
+<tr><td></td><td><a href="20251021_formaty.html">Formatowanie</a></td></tr>
+<tr><td></td><td><a href="20251009_galeria3.html">Galeria 3</a></td></tr>
+<tr><td></td><td><a href="20251009_galeria2.html">Galeria 2</a></td></tr>
+<tr><td></td><td><a href="20251009_galeria.html">Galeria</a></td></tr>
+            </table>
         </div>
         <h2>Strony Internetowe</h2>
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251118_tabelka3.html">Tabele 3</a></td></tr>
 <tr><td></td><td><a href="20251104_tabelka2.html">Tabele 2</a></td></tr>
 <tr><td></td><td><a href="20251104_tabelka.html">Tabele 1</a></td></tr>
 <tr><td></td><td><a href="20251104_bloki6.html">Poprawa</a></td></tr>
@@ -35,22 +39,20 @@
 <tr><td></td><td><a href="20250904_podzialstrony.html">Podział Strony</a></td></tr>
             </table>
         </div>
+        <h2>Aplikacje Internetowe</h2>
+        <div class="table-wrapper">
+            <table border="1">
+<tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251017_sprawdzian.html">Sprawdzian</a></td></tr>
+<tr><td></td><td><a href="20250916_formularz.html">Formularz 2</a></td></tr>
+<tr><td></td><td><a href="20250909_formularz.html">Formularz</a></td></tr>
+<tr><td></td><td><a href="20250902_zdarzenia.html">Zdarzenia</a></td></tr>
+            </table> 
+        </div>
         <h2>Bazy Danych</h2>
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
-            </table>
-        </div>
-        <h2>Egzaminy</h2>
-        <div class="table-wrapper">
-            <table border="1">
-<tr><th>Lp.</th><th>Nazwa</th></tr>
-<tr><td></td><td><a href="20251028_obrazki.html">Obrazki</a></td></tr>
-<tr><td></td><td><a href="20251023_index.html">Hurtownia</a></td></tr>
-<tr><td></td><td><a href="20251021_formaty.html">Formatowanie</a></td></tr>
-<tr><td></td><td><a href="20251009_galeria3.html">Galeria 3</a></td></tr>
-<tr><td></td><td><a href="20251009_galeria2.html">Galeria 2</a></td></tr>
-<tr><td></td><td><a href="20251009_galeria.html">Galeria</a></td></tr>
             </table>
         </div>
         <h2>Inne</h2>
