--- a/inne.html
+++ b/inne.html
@@ -12,6 +12,10 @@
     <div class="container">
         <h1>Inne Strony</h1>
         <div class="buttons">
+            <a href="20251118_biologia.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1763488007/biologiakl_uw8rnw.png" alt="Biologia">
+                <span>Biologia</span>
+            </a>
             <a href="20251101_historia.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1761995854/historia_prlmra.png" alt="Historia">
                 <span>Historia</span>
