--- a/20250919_notatki.html
+++ b/20250919_notatki.html
@@ -29,6 +29,6 @@
     <!-- Notatki będą generowane dynamicznie -->
   </main>
 
-  <script src="notatki.js"></script>
+  <script src="20250919_notatki.js"></script>
 </body>
 </html>
