--- a/20250831_dawid.html
+++ b/20250831_dawid.html
@@ -32,21 +32,13 @@
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758824207/vocabulary_pbrxms.png" alt="Vocabulary">
                 <span>Vocabulary</span>
             </a>
-            <a href="20250912_mediumemotik.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1755866451/emotki_lb8pvb.png" alt="Emotki">
-                <span>Emotki</span>
-            </a>
-            <a href="20250919_notatki.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758306331/notatkiii_ty6hca.png" alt="Notatki">
-                <span>Notatki</span>
+            <a href="20251118_prawko.html" class="app-icon">
+                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1763498037/prawko_ndidvf.png" alt="Prawko">
+                <span>Prawko</span>
             </a>
             <a href="20250923_flagi.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1758639345/trudneflagi_zu1poc.png" alt="Trudne Flagi">
                 <span>Trudne Flagi</span>
-            </a>
-            <a href="index.html" class="app-icon">
-                <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750251558/gry_nxmlim.jpg" alt="Gry">
-                <span>Gry</span>
             </a>
             <a href="inne.html" class="app-icon">
                 <img src="https://res.cloudinary.com/diljpkw9f/image/upload/v1750881328/inne_cqv03n.png" alt="Inne">
