--- a/20251118_prawko.html
+++ b/20251118_prawko.html
@@ -12,22 +12,29 @@
         text-align: center;
     }
 
+    /* GÓRNY PASEK */
     .top-bar {
         display: flex;
         justify-content: space-between;
         padding: 15px 20px;
-        font-size: 30px;
+        font-size: 40px; /* większy tekst */
         font-weight: bold;
         background: white;
         border-bottom: 2px solid #ddd;
     }
 
+    /* NUMER PYTANIA */
+    #counter {
+        margin-top: 20px;
+        font-size: 38px;
+        font-weight: bold;
+    }
+
+    /* OBRAZEK – pełna szerokość telefonu */
     #image {
         width: 100%;
-        max-width: 600px;
-        aspect-ratio: 16/9;
-        object-fit: cover;
-        margin-top: 20px;
+        height: auto;
+        margin-top: 10px;
         border-radius: 10px;
         border: 2px solid #ccc;
     }
@@ -41,16 +48,16 @@
     .buttons {
         display: flex;
         justify-content: center;
-        gap: 20px;
+        gap: 30px;
         margin-top: 20px;
     }
 
     button {
         background: #b5b5b5;
         border: none;
-        padding: 15px 40px;
-        font-size: 46px;
-        border-radius: 10px;
+        padding: 25px 70px; /* SZERSZE PRZYCISKI */
+        font-size: 50px;
+        border-radius: 14px;
         cursor: pointer;
         color: white;
         transition: 0.3s;
@@ -70,16 +77,17 @@
 
     #endScreen {
         margin-top: 40px;
-        font-size: 50px;
+        font-size: 55px;
         font-weight: bold;
     }
 
     #restart {
         margin-top: 20px;
-        padding: 15px 30px;
+        padding: 20px 40px;
         font-size: 46px;
         background: #6b6b6b;
         border-radius: 10px;
+        color: white;
     }
 </style>
 </head>
@@ -89,6 +97,8 @@
     <div>Życia: <span id="lives">3</span></div>
     <div>Punkty: <span id="points">0</span></div>
 </div>
+
+<div id="counter">Pytanie 1 / 1</div>
 
 <img id="image" src="">
 
@@ -209,7 +219,7 @@ const questions = [
         correct: "tak"
     }
 ];
-
+    
 let shuffledQuestions = [];
 let index = 0;
 let lives = 3;
@@ -220,10 +230,15 @@ const imgEl = document.getElementById("image");
 const qEl = document.getElementById("question");
 const livesEl = document.getElementById("lives");
 const pointsEl = document.getElementById("points");
+const counterEl = document.getElementById("counter");
 const endScreen = document.getElementById("endScreen");
 
 const yesBtn = document.getElementById("yesBtn");
 const noBtn = document.getElementById("noBtn");
+
+function updateCounter() {
+    counterEl.textContent = `Pytanie ${index+1} / ${shuffledQuestions.length}`;
+}
 
 function startGame() {
     lives = 3;
@@ -231,6 +246,7 @@ function startGame() {
     index = 0;
     answering = true;
     endScreen.innerHTML = "";
+
     yesBtn.style.display = "inline-block";
     noBtn.style.display = "inline-block";
 
@@ -249,6 +265,7 @@ function loadQuestion() {
     yesBtn.classList.remove("correct", "wrong");
     noBtn.classList.remove("correct", "wrong");
 
+    updateCounter();
     answering = true;
 }
 
@@ -265,6 +282,7 @@ function checkAnswer(ans) {
         else noBtn.classList.add("correct");
 
         setTimeout(nextQuestion, 800);
+
     } else {
         lives--;
         livesEl.textContent = lives;
