--- a/20251118_prawko.html
+++ b/20251118_prawko.html
@@ -37,6 +37,7 @@
         margin-top: 10px;
         border-radius: 10px;
         border: 2px solid #ccc;
+        aspect-ratio: 16/9;
     }
 
     #question {
