--- a/20250901_szkola.html
+++ b/20250901_szkola.html
@@ -53,6 +53,8 @@
         <div class="table-wrapper">
             <table border="1">
 <tr><th>Lp.</th><th>Nazwa</th></tr>
+<tr><td></td><td><a href="20251106_baza.html">Fryzjerstwo</a></td></tr>
+<tr><td></td><td><a href="20251028_baza.html">Obrazki</a></td></tr>
             </table>
         </div>
         <h2>Inne</h2>
