--- a/20251118_prawko.html
+++ b/20251118_prawko.html
@@ -218,6 +218,126 @@ const questions = [
         img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763497793/2-114_eootga.png",
         q: "Czy ten znak zakazu umieszczony w obrębie skrzyżowania dotyczy tylko jezdni, przy której jest ustawiony?",
         correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763581999/3-38_zbctby.png",
+        q: "Czy kierujący pojazdem poruszającym się prawym pasem ruchu po ominięciu tego znaku ma obowiązek umożliwić Tobie zmianę pasa ruchu ?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582077/3-51_nvv4kl.png",
+        q: "Czy w tej sytuacji wolno Ci w niedzielę korzystać z pasa ruchu przy prawej krawędzi jezdni?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582149/3-55_wte6sf.png",
+        q: "Czy na tym skrzyżowaniu wolno Ci skręcić w lewo, jeśli jedziesz prawym pasem?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582228/3-81_uz70ka.png",
+        q: "Czy ten znak zezwala na wjazd do strefy czystego transportu pojazdem, który jest napędzany gazem ziemnym?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582228/3-81_uz70ka.png",
+        q: "Czy ten znak zezwala na wjazd do strefy czystego transportu pojazdom napędzanym wodorem?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582394/4-9_y3zzy6.png",
+        q: "Czy w tej sytuacji, bezpośrednio za widoczną po prawej stronie drogi linią złożoną z punktowych elementów odblaskowych barwy białej jest pobocze?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582498/4-56_xcijgs.png",
+        q: "Czy w tej sytuacji widząc ten znak poziomy w postaci trójkątów masz obowiązek każdorazowego zatrzymania się przed wjazdem na drogę z pierwszeństwem?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582587/4-64_yj18eo.png",
+        q: "Czy widoczna linia złożona z białych punktowych elementów odblaskowych wyznacza lewą krawędź jezdni?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582680/4-99_xm4au9.png",
+        q: "Czy w przedstawionej sytuacji możesz wyprzedzić rowerzystę jeśli będzie to wymagało nieznacznego przekroczenia linii podwójnej ciągłej?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582785/5-2_cqiwaa.png",
+        q: "Czy w tej sytuacji zabroniony jest Twój wjazd na skrzyżowanie?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582881/5-11_lyq0a8.png",
+        q: "Czy ten sygnał świetlny oznacza, że przy skręcaniu w lewo nie występuje kolizja z innymi uczestnikami ruchu?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763582980/5-13_bflrba.png",
+        q: "Czy w przedstawionej sytuacji wolno Ci skręcić w prawo?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583071/5-26_qct35k.png",
+        q: "Masz zamiar skręcić w prawo. Czy w przedstawionej sytuacji zatrzymasz się przed sygnalizatorem?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583166/5-30_rllzq4.png",
+        q: "Czy w tej sytuacji, zamierzając skręcić w prawo, masz pierwszeństwo przed pieszym?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583244/5-31_z1pidj.png",
+        q: "Czy następny sygnał będzie Ci zabraniał wjazdu na skrzyżowanie?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583314/5-32_gaqgzp.png",
+        q: "Czy w tej sytuacji, podczas zawracania wystąpi kolizja z innymi uczestnikami ruchu?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583378/5-34_m32kxk.png",
+        q: "Czy za chwilę będzie dawany sygnał zakazujący wjazdu?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583445/5-35_ctfbuv.png",
+        q: "Czy w widocznej sytuacji, w czasie nadawania tego sygnału świetlnego masz prawo skręcić w lewo na skrzyżowaniu?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583590/5-49_bgg9m5.png",
+        q: "Czy taka postawa policjanta oznacza, że masz prawo skręcić w prawo?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583650/5-53_ol0qbj.png",
+        q: "Czy w tej sytuacji migający sygnał świetlny ostrzega o występującym niebezpieczeństwie lub utrudnieniu ruchu?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583713/5-61_mgt9yx.png",
+        q: "Czy w tej sytuacji sygnał świetlny nadawany dla Twojego pasa ruchu zezwala Ci na zawracanie?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583791/5-69_ookyhr.png",
+        q: "Czy widoczny na skrzyżowaniu sygnał zielony oznacza bezkolizyjny skręt w lewo?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763583855/5-84_el3ulc.png",
+        q: "Czy widoczny sygnał dawany przez osobę uprawnioną oznacza, że za chwilę będzie Ci wolno wjechać na skrzyżowanie?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763584868/6-10_cw7xgy.png",
+        q: "Czy włączając się do ruchu po zabraniu pasażera, masz pierwszeństwo przed nadjeżdżającym pojazdem, który skręca w lewo na stanowisko postojowe?",
+        correct: "nie"
     }
 ];
     
