--- a/20251118_prawko.html
+++ b/20251118_prawko.html
@@ -338,6 +338,191 @@ const questions = [
         img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763584868/6-10_cw7xgy.png",
         q: "Czy włączając się do ruchu po zabraniu pasażera, masz pierwszeństwo przed nadjeżdżającym pojazdem, który skręca w lewo na stanowisko postojowe?",
         correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763653290/7-16_pguznh.png",
+        q: "Czy w przedstawionej sytuacji zbliżasz się do skrzyżowania drogą podporządkowaną?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763653610/7-28_rw9tik.png",
+        q: "Czy w tej sytuacji, zamierzając skręcić w prawo, masz obowiązek zatrzymać się przed skrzyżowaniem?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763653700/7-44_oyg8gd.png",
+        q: "Czy w przedstawionej sytuacji zbliżasz się do drogi z pierwszeństwem przejazdu?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763653793/7-48_epng2a.png",
+        q: "Zamierzasz jechać na wprost, a kierujący pojazdem, jadącym z naprzeciwka, chce skręcić w lewo. Czy masz przed nim pierwszeństwo?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763653882/7-51_xt7jzb.png",
+        q: "Czy w przedstawionej sytuacji powinieneś ustąpić pierwszeństwa pojazdom wyjeżdżającym z lewej strony?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763653974/7-61_lcizbk.png",
+        q: "Zamierzasz skręcić w lewo. Czy na tym skrzyżowaniu masz pierwszeństwo przejazdu przed wjeżdżającym na nie pojazdem?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654063/8-3_ui7j6y.png",
+        q: "Czy skręcając w prawo na tym skrzyżowaniu jesteś zobowiązany do zatrzymania się przed sygnalizatorem?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654140/8-4_tnleg0.png",
+        q: "Zamierzasz jechać na wprost. Czy masz obowiązek ustąpić pierwszeństwa tramwajowi skręcającemu w lewo?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654218/8-5_qwnept.png",
+        q: "Czy w tej sytuacji masz obowiązek zatrzymać się przed widoczną linią poprzeczną?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654285/8-12_i0ofkf.png",
+        q: "Czy w tej sytuacji wolno Ci wjechać za sygnalizator, jeżeli zatrzymanie się przed nim wymaga gwałtownego hamowania?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654382/8-72_l5eiwd.png",
+        q: "Czy w tej sytuacji masz pierwszeństwo przed pojazdem, który jedzie z przeciwnego kierunku i skręca w lewo?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654498/10-37_fvhrhp.png",
+        q: "Czy w tej sytuacji wjeżdżając do tunelu musisz utrzymywać odstęp od poprzedzającego pojazdu nie mniejszy niż 100 metrów?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654582/10-42_akd59e.png",
+        q: "Czy w tej sytuacji wolno Ci zatrzymać pojazd na prawym poboczu?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654671/10-75_n22gi5.png",
+        q: "Czy postój pojazdu bezpośrednio za widocznym słupkiem wskaźnikowym jest dozwolony?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654761/10-78_i0wcrd.png",
+        q: "Czy w tej sytuacji widoczny po prawej stronie jezdni zaparkowany pojazd, nieoznakowany kartą parkingową, podlega usunięciu z drogi na koszt jego właściciela?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654844/10-80_r6bfhx.png",
+        q: "Czy za tym znakiem, w razie zatrzymania pojazdu wskutek zatoru drogowego, masz obowiązek zachować odstęp od poprzedzającego pojazdu nie mniejszy niż 5m?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763654909/10-88_wx9f81.png",
+        q: "Czy w tej sytuacji masz prawo zaparkować pojazd za tym znakiem, jeżeli pozostawisz odpowiednią ilość miejsca dla pieszych i pojazdów?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655031/11-11_qapetg.png",
+        q: "Czy kierujący ma obowiązek stosować tzw. jazdę na suwak, gdy nie ma znacznego zmniejszenia prędkości ?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655164/11-31_h2pph5.png",
+        q: "Czy na tym skrzyżowaniu wolno Ci zawrócić z zajmowanego obecnie pasa ruchu?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655234/11-44_ng0a3u.png",
+        q: "Czy w tej sytuacji wolno Ci zawrócić na najbliższym skrzyżowaniu?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655288/11-48_yyz441.png",
+        q: "Czy jadąc tym pasem ruchu masz prawo zawrócić na najbliższym skrzyżowaniu?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655359/11-75_mwa7ki.png",
+        q: "Czy w przedstawionej sytuacji wolno Ci zawrócić, wykorzystując widoczną po lewej stronie zatokę?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655428/11-85_yh5zvx.png",
+        q: "Czy w przedstawionej sytuacji masz prawo zawrócić na skrzyżowaniu?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655494/11-103_euncoo.png",
+        q: "Czy na tym skrzyżowaniu wolno Ci zawrócić?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655636/12-1_ljgf5l.png",
+        q: "Czy w tej sytuacji zabronione jest wyprzedzanie pojazdu szynowego?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655727/12-8_mkw8mu.png",
+        q: "Czy w przedstawionej sytuacji możesz wyprzedzić z lewej lub prawej strony pojazd jadący przed Tobą?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655791/12-11_gxljto.png",
+        q: "Czy w tej sytuacji masz prawo wyprzedzić pojazd, który jedzie przed Tobą?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655869/12-14_f2lkiu.png",
+        q: "Czy na tej drodze poza obszarem zabudowanym dopuszcza się wyprzedzanie pojazdu silnikowego z prawej strony?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763655952/12-19_txcq6f.png",
+        q: "Czy na tym skrzyżowaniu masz prawo wyprzedzać?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763656004/12-27_pxxv6k.png",
+        q: "Czy w tej sytuacji, dojeżdżając drogą dwukierunkową do wierzchołka wzniesienia, masz prawo wyprzedzić motocykl?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763656075/12-33_bg5ycm.png",
+        q: "Czy w takim miejscu na drodze dopuszcza się wyprzedzanie pojazdu silnikowego?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763656151/12-35_krocu6.png",
+        q: "Czy w tej sytuacji masz prawo wyprzedzić pojazd, który jedzie przed Tobą?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763656206/12-36_rzoni0.png",
+        q: "Kierujesz pojazdem na obszarze zabudowanym. Czy w tej sytuacji masz prawo wyprzedzić z prawej strony pojazd jadący przed Tobą?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763656297/12-40_g8itip.png",
+        q: "Czy w tej sytuacji wolno Ci wykonać manewr wyprzedzania?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763656370/12-50_qxiqxe.png",
+        q: "Czy w tej sytuacji masz prawo kontynuować wyprzedzanie?",
+        correct: "tak"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763656452/12-65_q6ewb9.png",
+        q: "Czy w tej sytuacji masz prawo wyprzedzić pojazd szynowy?",
+        correct: "nie"
+    },
+    {
+        img: "https://res.cloudinary.com/diljpkw9f/image/upload/v1763656504/12-82_wxzyqz.png",
+        q: "Kierujesz samochodem ciężarowym o dopuszczalnej masie całkowitej nie przekraczającej 3,5 tony. Czy w przedstawionej sytuacji wolno Ci wyprzedzić samochód osobowy?",
+        correct: "tak"
     }
 ];
     
